# twamm

./: .editorconfig  .gitignore  .gitmodules  Anchor.toml  Makefile  README.md  package.json
.github/workflows/: code-quality.yaml
admin/: .gitignore  README.md  cli  package.json  token_pair.json  tsconfig.json
admin/src/: cli.mts  client.mts  methods.mts  types.mts  validators.mts
admin/tests/: cli.test.ts  fn.test.ts
app/: .env  .eslintignore  .eslintrc.json  .gitignore  .prettiertc.json  README.md  babel.config.js  jest.config.js  next.config.js  package.json  tsconfig.json  wallet.json
app/pages/: _app.tsx  _document.tsx  index.tsx
app/public/: manifest.json
app/scripts/: fetch-idl.mjs
app/src/: crank.ts  crank_client.ts  env.ts  i18n.ts  ssr.tsx  swr-cache.ts  swr-options.ts  theme.tsx  why-did-you-render.ts
app/styles/: globals.css
programs/twamm/: Cargo.toml
programs/twamm/src/: error.rs  instructions.rs  lib.rs  math.rs  oracle.rs  state.rs
programs/twamm/src/instructions/: cancel_order.rs  crank.rs  delete_test_pair.rs  delete_test_pool.rs  get_outstanding_amount.rs  init.rs  init_token_pair.rs  place_order.rs  set_admin_signers.rs  set_crank_authority.rs  set_fees.rs  set_limits.rs  set_oracle_config.rs  set_permissions.rs  set_test_oracle_price.rs  set_test_time.rs  set_time_in_force.rs  settle.rs  test_init.rs  withdraw_fees.rs
programs/twamm/src/state/: multisig.rs  order.rs  pool.rs  token_pair.rs
restore-modules-cache-action/: action.yaml
tests/: 1_basics.ts  2_single_user.ts  3_multi_user.ts  4_fail_tests.ts  twamm_tester.ts
(+193 files in other folders)
