[package]
name = "twamm"
version = "0.1.0"
description = "Solana Permissionless TWAMM"
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
repository = "https://github.com/askibin/twamm"
categories = ["finance"]
keywords = ["solana", "dex", "twamm", "amm"]
license = "Apache-2.0"
homepage = "https://solana.com/"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "twamm"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
test = []
default = []

[profile.release]
lto = true
codegen-units = 1
overflow-checks = true

[dependencies]
anchor-lang = { version = "0.26.0", features = ["init-if-needed"] }
anchor-spl = "0.26.0"
solana-program = "1.14.13"
solana-security-txt = "1.1.0"
pyth-sdk-solana = "0.7.0"
ahash = "=0.7.6"
num-traits = "0.2.15"
num = "0.4.0"
